5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1662_1397.log
== TEST (2019-04-15 14:48:14) 
-- CODE:
a=float(input())

if(a<=10000):
	custo=(5.00*a)
if(a>=10000):
	conta=(5.00*a)+(4*(1%a))
print(round(custo,2))
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:48:52) 
-- CODE:
a=float(input())

if(a<=10000):
	custo=(5.00*a)
if(a>=10000):
	conta=(5.00*a)+(4*(1%a))
print(round(custo,2))
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:48:59) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
if(a>=10000):
	conta=(5.00*a)+(4*(1%a))
print(round(custo,2))
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:50:01) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a)+4*(1%a)
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:50:20) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a)+(1%a)
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:50:30) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a)+(10%a)
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:50:40) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a)+(%a)
print(round(conta,2))
-- ERROR:
File "XXXX", line 7
    conta=(5.00*a)+(%a)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:50:46) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a%a)
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:50:55) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a)
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:51:16) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a%4)
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:51:43) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a+10000%4)
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:51:54) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a+0000%4)
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:52:26) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00+4.00*a)
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:52:34) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00+4.00*a)
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:52:35) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00+4.00*a)
print(round(conta,2))
-- EXECUTION TIME:
0.151773
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1397/main.py", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:52:42) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00+4*a)
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:53:14) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a)+4*a/a
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:53:31) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a)+4*a/a-1000
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:53:50) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a)+(*a/a-1000)
print(round(conta,2))
-- ERROR:
File "XXXX", line 7
    conta=(5.00*a)+(*a/a-1000)
                   ^
SyntaxError: can't use starred expression here
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:54:07) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a)+1*a
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:54:21) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a)+0.4*a
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:54:58) 
-- CODE:
a=float(input(":"))

if(a<=10000):
	custo=(5.00*a)
	print(round(custo,2))
if(a>=10000):
	conta=(5.00*a)+a-1000
print(round(conta,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(conta,2))
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
